--- a/index-en.html
+++ b/index-en.html
@@ -45,10 +45,10 @@
                   <a href="#"> about us </a>
                 </li>
                 <li>
-                  <a href="#">  Products </a>
+                  <a href="#"> Products </a>
                 </li>
                 <li>
-                  <a href="#">  news </a>
+                  <a href="#"> news </a>
                 </li>
                 <li>
                   <a href="#"> contact us </a>
@@ -88,30 +88,21 @@
             <div class="swiper-slide">
               <div class="main">
                 <a href="#!" class="pro-img">
-                  <img
-                    src="images/main-slider/01.jpg"
-                    class="img-fluid"
-                  />
+                  <img src="images/main-slider/01.jpg" class="img-fluid" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="main">
                 <a href="#!" class="pro-img">
-                  <img
-                    src="images/main-slider/01.jpg"
-                    class="img-fluid"
-                  />
+                  <img src="images/main-slider/01.jpg" class="img-fluid" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="main">
                 <a href="#!" class="pro-img">
-                  <img
-                    src="images/main-slider/01.jpg"
-                    class="img-fluid"
-                  />
+                  <img src="images/main-slider/01.jpg" class="img-fluid" />
                 </a>
               </div>
             </div>
@@ -131,13 +122,12 @@
     <section class="about-us">
       <div class="container">
         <div class="about-us-content">
-            <div class="about-us-cont wow fadeInDown" wow-data-delay="5s">
-              <div class="about-title">
-                <h3>
-                  We specialize in importing and distributing
-                  Organic Products
-                </h3>
-              </div>
+          <div class="about-us-cont wow fadeInDown" wow-data-delay="5s">
+            <div class="about-title">
+              <h3>
+                We specialize in importing and distributing Organic Products
+              </h3>
+            </div>
             <a href="#" class="about-us-link">
               Get to know us more
               <i class="las la-long-arrow-alt-left"></i>
@@ -173,30 +163,38 @@
         <span></span>
       </div>
       <div class="features-img-cont">
-        <img src="images/aboutafter.jpg" class="features-img img-fluid" alt="">
+        <img
+          src="images/aboutafter.jpg"
+          class="features-img img-fluid"
+          alt=""
+        />
       </div>
       <div class="container">
         <div class="features-cont">
           <div class="features-box">
-              <img src="images/01.png" class="img-fluid features-icon" alt="">
+            <figure>
+              <img src="images/01.svg" class="img-fluid features-icon" alt="" />
+            </figure>
             <div class="features-word">
               <span class="features-head"> our vision </span>
               <p class="features-pargh">
-                Contrary to popular belief, Lorem Ipsum is not a random text.
-                It even has roots in classical Latin literature since 45 B.C.
+                Contrary to popular belief, Lorem Ipsum is not a random text. It
+                even has roots in classical Latin literature since 45 B.C.
               </p>
             </div>
           </div>
           <div class="features-box">
-            <img src="images/02.png" class="img-fluid features-icon" alt="">
-          <div class="features-word">
-            <span class="features-head"> Our goals </span>
-            <p class="features-pargh">
-              Contrary to popular belief, Lorem Ipsum is not a random text.
-              It even has roots in classical Latin literature since 45 B.C.
-            </p>
+            <figure>
+              <img src="images/02.svg" class="img-fluid features-icon" alt="" />
+            </figure>
+            <div class="features-word">
+              <span class="features-head"> Our goals </span>
+              <p class="features-pargh">
+                Contrary to popular belief, Lorem Ipsum is not a random text. It
+                even has roots in classical Latin literature since 45 B.C.
+              </p>
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </section>
@@ -210,13 +208,13 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="product-cont">
-              <img src="images/product/01.jpg" class="img-fluid" alt="">
+              <img src="images/product/01.jpg" class="img-fluid" alt="" />
               <a class="product-link" href="#">matchai tea</a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="product-cont">
-              <img src="images/product/02.jpg" class="img-fluid" alt="">
+              <img src="images/product/02.jpg" class="img-fluid" alt="" />
               <a class="product-link" href="#">coffee</a>
             </div>
           </div>
@@ -235,74 +233,71 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="news">
-                <figure class="news-figure">
-                  <img
-                    class="news-img"
-                    alt="image1"
-                    src="images/news-slider/01.jpg"
-                    class="img-fluid"
-                  />
-                </figure>
-                <div class="news-content">
-                  <a class="news-link" href="#">
-                    Contrary to popular belief, Lorem Ipsum is not a text
-                    randomly
-                  </a>
-                  <p class="news-pargh">
-                    There are many types of Lorem Ipsum texts available, but the majority have been modified in some form via
-                  </p>
-                  <a class="news-read" href="#">
-                    Read more
-                  </a>
-                </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="news">
-                <figure class="news-figure">
-                  <img
-                    class="news-img"
-                    alt="image1"
-                    src="images/news-slider/02.jpg"
-                    class="img-fluid"
-                  />
-                </figure>
-                <div class="news-content">
-                  <a class="news-link" href="#">
-                    Contrary to popular belief, Lorem Ipsum is not a text
-                    randomly
-                  </a>
-                  <p class="news-pargh">
-                    There are many types of Lorem Ipsum texts available, but the majority have been modified in some form via
-                  </p>
-                  <a class="news-read" href="#">
-                    Read more
-                  </a>
-                </div>
+                  <figure class="news-figure">
+                    <img
+                      class="news-img"
+                      alt="image1"
+                      src="images/news-slider/01.jpg"
+                      class="img-fluid"
+                    />
+                  </figure>
+                  <div class="news-content">
+                    <a class="news-link" href="#">
+                      Contrary to popular belief, Lorem Ipsum is not a text
+                      randomly
+                    </a>
+                    <p class="news-pargh">
+                      There are many types of Lorem Ipsum texts available, but
+                      the majority have been modified in some form via
+                    </p>
+                    <a class="news-read" href="#"> Read more </a>
+                  </div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="news">
-                <figure class="news-figure">
-                  <img
-                    class="news-img"
-                    alt="image1"
-                    src="images/news-slider/03.jpg"
-                    class="img-fluid"
-                  />
-                </figure>
-                <div class="news-content">
-                  <a class="news-link" href="#">
-                    Contrary to popular belief, Lorem Ipsum is not a text
-                    randomly
-                  </a>
-                  <p class="news-pargh">
-                    There are many types of Lorem Ipsum texts available, but the majority have been modified in some form via
-                  </p>
-                  <a class="news-read" href="#">
-                    Read more
-                  </a>
+                  <figure class="news-figure">
+                    <img
+                      class="news-img"
+                      alt="image1"
+                      src="images/news-slider/02.jpg"
+                      class="img-fluid"
+                    />
+                  </figure>
+                  <div class="news-content">
+                    <a class="news-link" href="#">
+                      Contrary to popular belief, Lorem Ipsum is not a text
+                      randomly
+                    </a>
+                    <p class="news-pargh">
+                      There are many types of Lorem Ipsum texts available, but
+                      the majority have been modified in some form via
+                    </p>
+                    <a class="news-read" href="#"> Read more </a>
+                  </div>
                 </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="news">
+                  <figure class="news-figure">
+                    <img
+                      class="news-img"
+                      alt="image1"
+                      src="images/news-slider/03.jpg"
+                      class="img-fluid"
+                    />
+                  </figure>
+                  <div class="news-content">
+                    <a class="news-link" href="#">
+                      Contrary to popular belief, Lorem Ipsum is not a text
+                      randomly
+                    </a>
+                    <p class="news-pargh">
+                      There are many types of Lorem Ipsum texts available, but
+                      the majority have been modified in some form via
+                    </p>
+                    <a class="news-read" href="#"> Read more </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -323,17 +318,17 @@
       <div class="container">
         <div class="footer-cont">
           <figure class="footer-figure">
-            <img class="footer-logo img-fluid" src="images/footer-logo.png" alt="" >
+            <img class="footer-logo img-fluid" src="images/logo.png" alt="" />
           </figure>
           <ul class="nav-foot list-unstyled">
             <li>
               <a href="#"> about us </a>
             </li>
             <li>
-              <a href="#">  common questions </a>
+              <a href="#"> common questions </a>
             </li>
             <li>
-              <a href="#">  news </a>
+              <a href="#"> news </a>
             </li>
             <li>
               <a href="#"> hiring </a>
@@ -364,7 +359,12 @@
           </div>
           <span class="design-text">
             Made in
-            <a href="#"><img src="images/tasawk-en.png" alt="taswak" class="taswak-img img-fluid"></a>
+            <a href="#"
+              ><img
+                src="images/tasawk-en.png"
+                alt="taswak"
+                class="taswak-img img-fluid"
+            /></a>
           </span>
         </div>
       </div>
