--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                   <a href="#"> من نحن </a>
                 </li>
                 <li>
-                  <a href="#">  المنتجات </a>
+                  <a href="#"> المنتجات </a>
                 </li>
                 <li>
-                  <a href="#">  الأخبار </a>
+                  <a href="#"> الأخبار </a>
                 </li>
                 <li>
                   <a href="#"> اتصل بنا </a>
@@ -89,30 +89,21 @@
             <div class="swiper-slide">
               <div class="main">
                 <a href="#!" class="pro-img">
-                  <img
-                    src="images/main-slider/01.jpg"
-                    class="img-fluid"
-                  />
+                  <img src="images/main-slider/01.jpg" class="img-fluid" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="main">
                 <a href="#!" class="pro-img">
-                  <img
-                    src="images/main-slider/01.jpg"
-                    class="img-fluid"
-                  />
+                  <img src="images/main-slider/01.jpg" class="img-fluid" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="main">
                 <a href="#!" class="pro-img">
-                  <img
-                    src="images/main-slider/01.jpg"
-                    class="img-fluid"
-                  />
+                  <img src="images/main-slider/01.jpg" class="img-fluid" />
                 </a>
               </div>
             </div>
@@ -132,11 +123,10 @@
     <section class="about-us">
       <div class="container">
         <div class="about-us-content">
-            <div class="about-us-cont wow fadeInDown" wow-data-delay="5s">
-              <div class="about-title">
-                <h3>متخصصون في استيراد وتوزيع
-                  المنتجات العضوية</h3>
-              </div>
+          <div class="about-us-cont wow fadeInDown" wow-data-delay="5s">
+            <div class="about-title">
+              <h3>متخصصون في استيراد وتوزيع المنتجات العضوية</h3>
+            </div>
             <a href="#" class="about-us-link">
               تعرف علينا أكثر
               <i class="las la-long-arrow-alt-left"></i>
@@ -172,30 +162,38 @@
         <span></span>
       </div>
       <div class="features-img-cont">
-        <img src="images/aboutafter.jpg" class="features-img img-fluid" alt="">
+        <img
+          src="images/aboutafter.jpg"
+          class="features-img img-fluid"
+          alt=""
+        />
       </div>
       <div class="container">
         <div class="features-cont">
           <div class="features-box">
-              <img src="images/01.png" class="img-fluid features-icon" alt="">
+            <figure>
+              <img src="images/01.svg" class="img-fluid features-icon" alt="" />
+            </figure>
             <div class="features-word">
               <span class="features-head"> رؤيتنــــا </span>
               <p class="features-pargh">
-                خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً،
-                 بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد
+                خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن
+                له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد
               </p>
             </div>
           </div>
           <div class="features-box">
-            <img src="images/02.png" class="img-fluid features-icon" alt="">
-          <div class="features-word">
-            <span class="features-head"> أهدافنا </span>
-            <p class="features-pargh">
-              خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً،
-               بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد
-            </p>
+            <figure>
+              <img src="images/02.svg" class="img-fluid features-icon" alt="" />
+            </figure>
+            <div class="features-word">
+              <span class="features-head"> أهدافنا </span>
+              <p class="features-pargh">
+                خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن
+                له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد
+              </p>
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </section>
@@ -209,13 +207,13 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="product-cont">
-              <img src="images/product/01.jpg" class="img-fluid" alt="">
+              <img src="images/product/01.jpg" class="img-fluid" alt="" />
               <a class="product-link" href="#">شاي الماتشا</a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="product-cont">
-              <img src="images/product/02.jpg" class="img-fluid" alt="">
+              <img src="images/product/02.jpg" class="img-fluid" alt="" />
               <a class="product-link" href="#">القهوة</a>
             </div>
           </div>
@@ -234,71 +232,68 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="news">
-                <figure class="news-figure">
-                  <img
-                    class="news-img"
-                    alt="image1"
-                    src="images/news-slider/01.jpg"
-                    class="img-fluid"
-                  />
-                </figure>
-                <div class="news-content">
-                  <a class="news-link" href="#">خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ
-                    عشوائيا
-                  </a>
-                  <p class="news-pargh">
-                    هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر
-                  </p>
-                  <a class="news-read" href="#">
-                    قراءة المزيد
-                  </a>
-                </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="news">
-                <figure class="news-figure">
-                  <img
-                    class="news-img"
-                    alt="image1"
-                    src="images/news-slider/02.jpg"
-                    class="img-fluid"
-                  />
-                </figure>
-                <div class="news-content">
-                  <a class="news-link" href="#">خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ
-                    عشوائيا
-                  </a>
-                  <p class="news-pargh">
-                    هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر
-                  </p>
-                  <a class="news-read" href="#">
-                    قراءة المزيد
-                  </a>
-                </div>
+                  <figure class="news-figure">
+                    <img
+                      class="news-img"
+                      alt="image1"
+                      src="images/news-slider/01.jpg"
+                      class="img-fluid"
+                    />
+                  </figure>
+                  <div class="news-content">
+                    <a class="news-link" href="#"
+                      >خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائيا
+                    </a>
+                    <p class="news-pargh">
+                      هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن
+                      الغالبية تم تعديلها بشكل ما عبر
+                    </p>
+                    <a class="news-read" href="#"> قراءة المزيد </a>
+                  </div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="news">
-                <figure class="news-figure">
-                  <img
-                    class="news-img"
-                    alt="image1"
-                    src="images/news-slider/03.jpg"
-                    class="img-fluid"
-                  />
-                </figure>
-                <div class="news-content">
-                  <a class="news-link" href="#">خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ
-                    عشوائيا
-                  </a>
-                  <p class="news-pargh">
-                    هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر
-                  </p>
-                  <a class="news-read" href="#">
-                    قراءة المزيد
-                  </a>
+                  <figure class="news-figure">
+                    <img
+                      class="news-img"
+                      alt="image1"
+                      src="images/news-slider/02.jpg"
+                      class="img-fluid"
+                    />
+                  </figure>
+                  <div class="news-content">
+                    <a class="news-link" href="#"
+                      >خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائيا
+                    </a>
+                    <p class="news-pargh">
+                      هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن
+                      الغالبية تم تعديلها بشكل ما عبر
+                    </p>
+                    <a class="news-read" href="#"> قراءة المزيد </a>
+                  </div>
                 </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="news">
+                  <figure class="news-figure">
+                    <img
+                      class="news-img"
+                      alt="image1"
+                      src="images/news-slider/03.jpg"
+                      class="img-fluid"
+                    />
+                  </figure>
+                  <div class="news-content">
+                    <a class="news-link" href="#"
+                      >خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائيا
+                    </a>
+                    <p class="news-pargh">
+                      هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن
+                      الغالبية تم تعديلها بشكل ما عبر
+                    </p>
+                    <a class="news-read" href="#"> قراءة المزيد </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -319,17 +314,17 @@
       <div class="container">
         <div class="footer-cont">
           <figure class="footer-figure">
-            <img class="footer-logo img-fluid" src="images/footer-logo.png" alt="" >
+            <img class="footer-logo img-fluid" src="images/logo.png" alt="" />
           </figure>
           <ul class="nav-foot list-unstyled">
             <li>
               <a href="#"> من نحن </a>
             </li>
             <li>
-              <a href="#">  الاسئلة الشائعة </a>
+              <a href="#"> الاسئلة الشائعة </a>
             </li>
             <li>
-              <a href="#">  الأخبار </a>
+              <a href="#"> الأخبار </a>
             </li>
             <li>
               <a href="#"> التوظيف </a>
@@ -360,7 +355,12 @@
           </div>
           <span class="design-text">
             صنع في
-            <a href="#"><img src="images/tasawk.png" alt="taswak" class="taswak-img img-fluid"></a>
+            <a href="#"
+              ><img
+                src="images/tasawk.png"
+                alt="taswak"
+                class="taswak-img img-fluid"
+            /></a>
           </span>
         </div>
       </div>
